--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "@walletconnect/react-native-compat": "2.2.1",
     "@walletconnect/sign-client": "2.2.1",
     "@walletconnect/types": "2.2.1",
+    "aes-js": "^3.1.2",
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
     "axios": "1.3.2",
@@ -172,6 +173,7 @@
     "react-native-ble-plx": "2.0.3",
     "react-native-bootsplash": "^6.3.2",
     "react-native-charts-wrapper": "0.5.10",
+    "react-native-cheerio": "^1.0.0-rc.4",
     "react-native-compass-heading": "^1.5.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-config": "1.4.6",
