--- a/package.json
+++ b/package.json
@@ -29,62 +29,62 @@
   "packageManager": "yarn@3.6.4",
   "dependencies": {
     "@babel/preset-typescript": "7.21.0",
-    "@bonfida/spl-name-service": "^1.1.1",
-    "@coral-xyz/anchor": "^0.28.0",
+    "@bonfida/spl-name-service": "1.1.1",
+    "@coral-xyz/anchor": "0.28.0",
     "@gorhom/bottom-sheet": "5.0.4",
     "@gorhom/portal": "1.0.14",
-    "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@graphql-codegen/typescript-rtk-query": "^3.1.1",
-    "@helium/account-fetch-cache": "0.9.18",
-    "@helium/account-fetch-cache-hooks": "0.9.18",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/typescript": "4.0.1",
+    "@graphql-codegen/typescript-operations": "4.0.1",
+    "@graphql-codegen/typescript-rtk-query": "3.1.1",
+    "@helium/account-fetch-cache": "0.9.14",
+    "@helium/account-fetch-cache-hooks": "0.9.14",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "^0.9.18",
+    "@helium/circuit-breaker-sdk": "0.9.14",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "^0.9.18",
-    "@helium/data-credits-sdk": "^0.9.18",
-    "@helium/distributor-oracle": "0.9.18",
-    "@helium/fanout-sdk": "^0.9.18",
-    "@helium/helium-entity-manager-sdk": "^0.9.18",
-    "@helium/helium-react-hooks": "0.9.18",
-    "@helium/helium-sub-daos-sdk": "^0.9.18",
+    "@helium/currency-utils": "0.9.14",
+    "@helium/data-credits-sdk": "0.9.14",
+    "@helium/distributor-oracle": "0.9.14",
+    "@helium/fanout-sdk": "0.9.14",
+    "@helium/helium-entity-manager-sdk": "0.9.14",
+    "@helium/helium-react-hooks": "0.9.14",
+    "@helium/helium-sub-daos-sdk": "0.9.14",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.9.18",
-    "@helium/lazy-distributor-sdk": "^0.9.18",
-    "@helium/modular-governance-hooks": "^0.0.13",
+    "@helium/idls": "0.9.14",
+    "@helium/lazy-distributor-sdk": "0.9.14",
+    "@helium/modular-governance-hooks": "0.0.13",
     "@helium/modular-governance-idls": "0.0.13",
     "@helium/onboarding": "4.11.0",
-    "@helium/organization-sdk": "^0.0.13",
+    "@helium/organization-sdk": "0.0.13",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "3.0.5",
-    "@helium/spl-utils": "0.9.18",
-    "@helium/state-controller-sdk": "^0.0.13",
-    "@helium/sus": "0.9.18",
+    "@helium/spl-utils": "0.9.14",
+    "@helium/state-controller-sdk": "0.0.13",
+    "@helium/sus": "0.9.14",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "^0.9.18",
-    "@helium/voter-stake-registry-hooks": "0.9.18",
-    "@helium/voter-stake-registry-sdk": "0.9.18",
+    "@helium/treasury-management-sdk": "0.9.14",
+    "@helium/voter-stake-registry-hooks": "0.9.14",
+    "@helium/voter-stake-registry-sdk": "0.9.14",
     "@helium/wallet-link": "4.11.0",
-    "@jup-ag/api": "^6.0.6",
-    "@keystonehq/keystone-sdk": "^0.8.0",
+    "@jup-ag/api": "6.0.6",
+    "@keystonehq/keystone-sdk": "0.8.0",
     "@ledgerhq/hw-app-solana": "7.2.4",
     "@ledgerhq/react-native-hid": "6.32.4",
     "@ledgerhq/react-native-hw-transport-ble": "6.29.4",
-    "@ledgerhq/types-devices": "^6.25.3",
-    "@metaplex-foundation/js": "^0.19.5",
+    "@ledgerhq/types-devices": "6.25.3",
+    "@metaplex-foundation/js": "0.19.5",
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
-    "@ngraveio/bc-ur": "^1.1.13",
+    "@ngraveio/bc-ur": "1.1.13",
     "@novalabsxyz/mobile-theme": "2.0.0-y.26",
-    "@onsol/tldparser": "^0.5.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@onsol/tldparser": "0.5.3",
+    "@react-native-async-storage/async-storage": "1.18.1",
     "@react-native-community/blur": "4.3.0",
     "@react-native-community/checkbox": "0.5.17",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
-    "@react-native-community/slider": "^4.5.2",
+    "@react-native-community/slider": "4.5.2",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/material-top-tabs": "6.5.1",
@@ -92,40 +92,40 @@
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "6.2.2",
     "@reduxjs/toolkit": "1.9.1",
-    "@rnmapbox/maps": "10.1.33",
+    "@rnmapbox/maps": "10.1.31",
     "@shopify/react-native-skia": "1.5.10",
     "@shopify/restyle": "2.4.2",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-memo": "0.2.3",
     "@solana/spl-token": "0.3.6",
-    "@solana/spl-token-metadata": "^0.1.4",
+    "@solana/spl-token-metadata": "0.1.4",
     "@solana/wallet-adapter-react": "0.15.33",
     "@solana/wallet-standard-features": "1.0.0",
-    "@solana/web3.js": "^1.87.6",
-    "@tanstack/react-query": "^5.45.1",
+    "@solana/web3.js": "1.87.6",
+    "@tanstack/react-query": "5.45.1",
     "@tradle/react-native-http": "2.0.1",
     "@turf/bbox": "6.5.0",
     "@turf/center": "6.5.0",
     "@turf/helpers": "6.5.0",
-    "@types/base-64": "^1.0.2",
+    "@types/base-64": "1.0.2",
     "@walletconnect/react-native-compat": "2.2.1",
     "@walletconnect/sign-client": "2.2.1",
     "@walletconnect/types": "2.2.1",
-    "aes-js": "^3.1.2",
+    "aes-js": "3.1.2",
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
     "axios": "1.3.2",
-    "axios-mock-adapter": "^1.22.0",
+    "axios-mock-adapter": "1.22.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.1",
-    "bip39": "^3.1.0",
+    "bip39": "3.1.0",
     "bn.js": "5.2.1",
     "browserify-zlib": "0.1.4",
     "bs58": "5.0.0",
     "buffer": "6.0.3",
     "camelcase-keys": "7.0.2",
-    "compare-versions": "^6.1.0",
+    "compare-versions": "6.1.0",
     "console-browserify": "1.2.0",
     "constants-browserify": "1.0.0",
     "crypto": "1.0.1",
@@ -133,7 +133,7 @@
     "deprecated-react-native-prop-types": "2.3.0",
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
-    "ed25519-hd-key": "^1.3.0",
+    "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
     "expo": "51.0.39",
     "expo-asset": "10.0.10",
@@ -143,44 +143,44 @@
     "expo-haptics": "13.0.1",
     "expo-linking": "6.3.1",
     "expo-local-authentication": "14.0.1",
-    "expo-location": "^17.0.1",
+    "expo-location": "17.0.1",
     "expo-secure-store": "13.0.2",
     "fuse.js": "6.6.2",
-    "geolib": "^3.3.4",
+    "geolib": "3.3.4",
     "h3-js": "4.1.0",
     "https-browserify": "0.0.1",
     "i18next": "21.9.1",
     "lodash": "4.17.21",
     "long": "5.2.0",
-    "lottie-ios": "^4.4.1",
-    "lottie-react-native": "^6.7.0",
-    "markdown-it": "^13.0.2",
-    "metro-react-native-babel-transformer": "^0.77.0",
+    "lottie-ios": "4.4.1",
+    "lottie-react-native": "6.7.0",
+    "markdown-it": "13.0.2",
+    "metro-react-native-babel-transformer": "0.77.0",
     "parse5": "6.0.1",
-    "patch-package": "^8.0.0",
+    "patch-package": "8.0.0",
     "path-browserify": "0.0.0",
     "punycode": "1.4.1",
     "qs": "6.11.0",
     "query-string": "7.1.1",
     "querystring-es3": "0.2.1",
     "react": "18.2.0",
-    "react-async-hook": "^4.0.0",
-    "react-error-boundary": "^4.0.13",
+    "react-async-hook": "4.0.0",
+    "react-error-boundary": "4.0.13",
     "react-i18next": "11.18.4",
     "react-native": "0.74.5",
-    "react-native-animated-numbers": "^0.6.2",
+    "react-native-animated-numbers": "0.6.2",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "2.0.3",
-    "react-native-bootsplash": "^6.3.2",
+    "react-native-bootsplash": "6.3.2",
     "react-native-charts-wrapper": "0.5.10",
-    "react-native-cheerio": "^1.0.0-rc.4",
-    "react-native-compass-heading": "^1.5.0",
-    "react-native-confetti-cannon": "^1.5.2",
+    "react-native-cheerio": "1.0.0-rc.4",
+    "react-native-compass-heading": "1.5.0",
+    "react-native-confetti-cannon": "1.5.2",
     "react-native-config": "1.4.6",
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-geocoding": "^0.5.0",
+    "react-native-geocoding": "0.5.0",
     "react-native-gesture-handler": "2.18.1",
     "react-native-get-random-values": "1.11.0",
     "react-native-icloudstore": "0.9.0",
@@ -190,14 +190,14 @@
     "react-native-linear-gradient": "2.6.2",
     "react-native-localize": "2.2.3",
     "react-native-mail": "6.1.1",
-    "react-native-markdown-display": "^7.0.0-alpha.2",
-    "react-native-navigation-bar-color": "^2.0.2",
+    "react-native-markdown-display": "7.0.0-alpha.2",
+    "react-native-navigation-bar-color": "2.0.2",
     "react-native-network-info": "5.2.1",
     "react-native-onesignal": "5.2.2",
-    "react-native-os": "^1.2.6",
-    "react-native-pager-view": "6.3.0",
-    "react-native-permissions": "^3.9.0",
-    "react-native-qrcode-svg": "^6.3.2",
+    "react-native-os": "1.2.6",
+    "react-native-pager-view": "6.1.2",
+    "react-native-permissions": "3.9.0",
+    "react-native-qrcode-svg": "6.3.2",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.14.0",
     "react-native-safe-area-context": "4.10.8",
@@ -205,17 +205,18 @@
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
-    "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-skeleton-placeholder": "5.2.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-sodium": "^0.4.0",
+    "react-native-sodium": "0.4.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-test-flight": "1.1.0",
     "react-native-text-ticker": "1.14.0",
     "react-native-udp": "2.7.0",
-    "react-native-url-polyfill": "^2.0.0",
+    "react-native-url-polyfill": "2.0.0",
     "react-native-video": "5.2.1",
+    "react-native-vision-camera": "4.5.3",
     "react-native-webview": "13.10.5",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
@@ -227,7 +228,7 @@
     "stream": "0.0.2",
     "stream-browserify": "1.0.0",
     "string_decoder": "0.10.31",
-    "text-encoding-polyfill": "^0.6.7",
+    "text-encoding-polyfill": "0.6.7",
     "timers-browserify": "1.4.2",
     "tinycolor2": "1.4.2",
     "tty-browserify": "0.0.0",
@@ -246,14 +247,14 @@
     "@react-native/metro-config": "0.74.87",
     "@react-native/typescript-config": "0.74.87",
     "@types/bn.js": "5.1.1",
-    "@types/debounce": "^1.2.4",
+    "@types/debounce": "1.2.4",
     "@types/i18n-js": "3.8.2",
     "@types/lodash": "4.14.183",
-    "@types/mapbox__geo-viewport": "^0.5.3",
-    "@types/markdown-it": "^13.0.5",
+    "@types/mapbox__geo-viewport": "0.5.3",
+    "@types/markdown-it": "13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "18.2.79",
+    "@types/react": "18.2.6",
     "@types/react-native": "0.70.6",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
@@ -264,7 +265,7 @@
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
-    "babel-jest": "^29.6.3",
+    "babel-jest": "29.6.3",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "eslint": "7.32.0",
@@ -278,10 +279,10 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "7.0.4",
-    "jest": "^29.6.3",
+    "jest": "29.6.3",
     "jetifier": "1.6.8",
     "prettier": "2.8.8",
-    "react-native-clean-project": "^4.0.3",
+    "react-native-clean-project": "4.0.3",
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
@@ -295,12 +296,12 @@
     "@types/react": "18",
     "react": "18.2.0",
     "@solana/wallet-adapter-react": "0.15.33",
-    "@helium/account-fetch-cache": "^0.9.18",
-    "@helium/account-fetch-cache-hooks": "^0.9.18",
-    "@helium/helium-react-hooks": "^0.9.18",
-    "@helium/voter-stake-registry-hooks": "^0.9.18",
-    "@helium/voter-stake-registry-sdk": "^0.9.18",
-    "@helium/modular-governance-hooks": "^0.0.13",
+    "@helium/account-fetch-cache": "0.9.14",
+    "@helium/account-fetch-cache-hooks": "0.9.14",
+    "@helium/helium-react-hooks": "0.9.14",
+    "@helium/voter-stake-registry-hooks": "0.9.14",
+    "@helium/voter-stake-registry-sdk": "0.9.14",
+    "@helium/modular-governance-hooks": "0.0.13",
     "@helium/onboarding": "4.11.0"
   },
   "react-native": {
