--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,12 +31,13 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         mavenLocal()
         maven {
             // expo-camera bundles a custom com.google.android:cameraview
             url "$rootDir/../node_modules/expo-camera/android/maven"
         }
-        google()
-        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://maven.google.com' }
+        maven { url 'https://jitpack.io' }
     }
 }
