--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -165,8 +165,8 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
+    implementation('com.github.Dimezis:BlurView:version-2.0.4')
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
