--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "2.11.3",
+  "version": "2.11.4",
   "private": true,
   "scripts": {
     "postinstall": "patch-package && ./node_modules/.bin/rn-nodeify --hack --install && npx jetify",
@@ -31,34 +31,35 @@
     "@coral-xyz/anchor": "^0.28.0",
     "@gorhom/bottom-sheet": "4.6.0",
     "@gorhom/portal": "1.0.14",
-    "@helium/account-fetch-cache": "0.9.23",
-    "@helium/account-fetch-cache-hooks": "0.9.23",
+    "@helium/account-fetch-cache": "0.9.24",
+    "@helium/account-fetch-cache-hooks": "0.9.24",
     "@helium/address": "4.10.2",
-    "@helium/circuit-breaker-sdk": "0.9.23",
+    "@helium/circuit-breaker-sdk": "0.9.24",
     "@helium/crypto-react-native": "4.8.0",
-    "@helium/currency-utils": "0.9.23",
-    "@helium/data-credits-sdk": "0.9.23",
-    "@helium/distributor-oracle": "0.9.23",
-    "@helium/fanout-sdk": "0.9.23",
-    "@helium/helium-entity-manager-sdk": "0.9.23",
-    "@helium/helium-react-hooks": "0.9.23",
-    "@helium/helium-sub-daos-sdk": "0.9.23",
+    "@helium/currency-utils": "0.9.24",
+    "@helium/data-credits-sdk": "0.9.24",
+    "@helium/distributor-oracle": "0.9.24",
+    "@helium/fanout-sdk": "0.9.24",
+    "@helium/helium-entity-manager-sdk": "0.9.24",
+    "@helium/helium-react-hooks": "0.9.24",
+    "@helium/helium-sub-daos-sdk": "0.9.24",
     "@helium/http": "4.7.5",
-    "@helium/idls": "0.9.23",
-    "@helium/lazy-distributor-sdk": "0.9.23",
+    "@helium/idls": "0.9.24",
+    "@helium/lazy-distributor-sdk": "0.9.24",
     "@helium/modular-governance-hooks": "^0.0.13",
     "@helium/modular-governance-idls": "0.0.13",
+    "@helium/no-emit-sdk": "^0.9.24",
     "@helium/onboarding": "4.11.0",
     "@helium/organization-sdk": "^0.0.13",
     "@helium/proto-ble": "4.0.0",
     "@helium/react-native-sdk": "3.0.5",
-    "@helium/spl-utils": "0.9.23",
+    "@helium/spl-utils": "0.9.24",
     "@helium/state-controller-sdk": "^0.0.13",
-    "@helium/sus": "0.9.23",
+    "@helium/sus": "0.9.24",
     "@helium/transactions": "4.8.1",
-    "@helium/treasury-management-sdk": "0.9.23",
-    "@helium/voter-stake-registry-hooks": "^0.9.23",
-    "@helium/voter-stake-registry-sdk": "0.9.23",
+    "@helium/treasury-management-sdk": "0.9.24",
+    "@helium/voter-stake-registry-hooks": "^0.9.24",
+    "@helium/voter-stake-registry-sdk": "0.9.24",
     "@helium/wallet-link": "4.11.0",
     "@jup-ag/api": "^6.0.6",
     "@keystonehq/keystone-sdk": "^0.8.0",
@@ -276,11 +277,11 @@
     "@types/react": "18",
     "react": "18.2.0",
     "@solana/wallet-adapter-react": "0.15.33",
-    "@helium/account-fetch-cache": "0.9.23",
-    "@helium/account-fetch-cache-hooks": "0.9.23",
-    "@helium/helium-react-hooks": "0.9.23",
-    "@helium/voter-stake-registry-hooks": "0.9.23",
-    "@helium/voter-stake-registry-sdk": "0.9.23",
+    "@helium/account-fetch-cache": "0.9.24",
+    "@helium/account-fetch-cache-hooks": "0.9.24",
+    "@helium/helium-react-hooks": "0.9.24",
+    "@helium/voter-stake-registry-hooks": "0.9.24",
+    "@helium/voter-stake-registry-sdk": "0.9.24",
     "@helium/modular-governance-hooks": "^0.0.13",
     "@helium/onboarding": "4.11.0"
   },
