--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@turf/center": "6.5.0",
     "@turf/helpers": "6.5.0",
     "@types/base-64": "^1.0.2",
+    "@ungap/structured-clone": "^1.3.0",
     "@walletconnect/react-native-compat": "2.2.1",
     "@walletconnect/sign-client": "2.2.1",
     "@walletconnect/types": "2.2.1",
