--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@ngraveio/bc-ur": "1.1.13",
+    "@noble/ciphers": "^1.3.0",
+    "@noble/ed25519": "^2.3.0",
     "@noble/hashes": "^1.8.0",
     "@onsol/tldparser": "0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
@@ -195,7 +197,6 @@
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-sodium": "0.4.0",
     "react-native-svg": "15.11.2",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
@@ -219,7 +220,6 @@
     "timers-browserify": "1.4.2",
     "tinycolor2": "1.4.2",
     "tty-browserify": "0.0.0",
-    "tweetnacl": "1.0.3",
     "url": "0.10.3",
     "use-debounce": "7.0.1",
     "vm-browserify": "0.0.4"
