--- a/package.json
+++ b/package.json
@@ -79,17 +79,17 @@
     "@noble/ed25519": "^2.3.0",
     "@noble/hashes": "^1.8.0",
     "@onsol/tldparser": "0.5.3",
-    "@react-native-async-storage/async-storage": "1.18.1",
-    "@react-native-community/checkbox": "0.5.17",
-    "@react-native-community/clipboard": "1.5.1",
-    "@react-native-community/hooks": "2.8.1",
-    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.0",
+    "@react-native-community/checkbox": "^0.5.20",
+    "@react-native-community/hooks": "^100.1.0",
+    "@react-native-community/netinfo": "^11.3.3",
     "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/material-top-tabs": "6.5.1",
-    "@react-navigation/native": "6.0.11",
+    "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "6.7.0",
-    "@react-navigation/stack": "6.2.2",
+    "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "1.9.1",
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
@@ -160,11 +160,11 @@
     "qs": "6.11.0",
     "query-string": "7.1.1",
     "querystring-es3": "0.2.1",
-    "react": "18.3.1",
+    "react": "19.1.0",
     "react-async-hook": "4.0.0",
     "react-error-boundary": "4.0.13",
     "react-i18next": "11.18.4",
-    "react-native": "0.77.2",
+    "react-native": "0.80.0",
     "react-native-appstate-hook": "1.0.6",
     "react-native-ble-plx": "3.4.0",
     "react-native-charts-wrapper": "0.5.10",
@@ -172,7 +172,7 @@
     "react-native-crypto": "2.2.0",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.24.0",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -190,14 +190,14 @@
     "react-native-permissions": "5.3.0",
     "react-native-qrcode-svg": "6.1.2",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "3.17.5",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "4.10.0",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.11.1",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.12.0",
     "react-native-tab-view": "3.3.4",
     "react-native-tcp": "3.3.2",
     "react-native-test-flight": "1.1.0",
@@ -205,7 +205,7 @@
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "2.0.0",
     "react-native-video": "6.12.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "^13.14.1",
     "react-redux": "8.0.4",
     "readable-stream": "3.6.0",
     "redux-persist": "6.0.0",
@@ -229,13 +229,13 @@
     "@babel/preset-env": "7.26.9",
     "@babel/runtime": "7.26.10",
     "@ledgerhq/hw-transport-mocker": "6.27.2",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.77.2",
-    "@react-native/eslint-config": "0.77.2",
-    "@react-native/metro-config": "0.77.2",
-    "@react-native/typescript-config": "0.77.2",
+    "@react-native-community/cli": "^19.0.0",
+    "@react-native-community/cli-platform-android": "^19.0.0",
+    "@react-native-community/cli-platform-ios": "^19.0.0",
+    "@react-native/babel-preset": "^0.80.0",
+    "@react-native/eslint-config": "0.80.0",
+    "@react-native/metro-config": "^0.80.0",
+    "@react-native/typescript-config": "0.80.0",
     "@types/bn.js": "5.1.1",
     "@types/debounce": "1.2.4",
     "@types/i18n-js": "3.8.2",
@@ -245,13 +245,12 @@
     "@types/markdown-it": "13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "18.3.3",
-    "@types/react-native": "0.70.6",
+    "@types/react": "^19.1.0",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
-    "@types/react-test-renderer": "19.1.0",
+    "@types/react-test-renderer": "^19.1.0",
     "@types/semver": "7.3.12",
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "5.59.2",
@@ -270,14 +269,14 @@
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "7.0.4",
-    "jest": "29.7.0",
+    "jest": "^29.2.1",
     "jetifier": "1.6.8",
     "prettier": "2.8.8",
     "react-native-clean-project": "4.0.3",
     "react-native-cli-bump-version": "1.5.0",
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.1.0",
     "reactotron-react-native": "5.0.3",
     "reactotron-redux": "3.1.3",
     "rn-nodeify": "10.3.0",
