--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "^6.3.21",
-    "@reduxjs/toolkit": "1.9.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "@shopify/restyle": "1.8.0",
     "@solana/spl-account-compression": "0.1.4",
     "@solana/spl-memo": "0.2.3",
@@ -207,9 +207,9 @@
     "react-native-url-polyfill": "2.0.0",
     "react-native-video": "6.12.0",
     "react-native-webview": "13.13.5",
-    "react-redux": "8.0.4",
+    "react-redux": "^9.2.0",
     "readable-stream": "3.6.0",
-    "redux-persist": "6.0.0",
+    "redux-persist": "^6.0.0",
     "rn-swipe-button": "1.3.8",
     "rxjs": "7.5.6",
     "semver": "7.3.8",
@@ -278,8 +278,8 @@
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
     "react-test-renderer": "19.1.0",
-    "reactotron-react-native": "5.0.3",
-    "reactotron-redux": "3.1.3",
+    "reactotron-react-native": "5.1.14",
+    "reactotron-redux": "3.2.0",
     "rn-nodeify": "10.3.0",
     "typescript": "~5.8.3"
   },
