--- a/package.json
+++ b/package.json
@@ -75,12 +75,12 @@
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@ngraveio/bc-ur": "1.1.13",
-    "@noble/ciphers": "1.3.0",
-    "@noble/ed25519": "2.3.0",
-    "@noble/hashes": "1.8.0",
+    "@noble/ciphers": "^1.3.0",
+    "@noble/ed25519": "^2.3.0",
+    "@noble/hashes": "^1.8.0",
     "@onsol/tldparser": "0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
-    "@react-native-clipboard/clipboard": "1.16.3",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/checkbox": "0.5.20",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
@@ -107,8 +107,8 @@
     "@walletconnect/types": "2.2.1",
     "angry-purple-tiger": "1.0.5",
     "assert": "1.5.0",
-    "axios": "1.11.0",
-    "axios-mock-adapter": "2.1.0",
+    "axios": "^1.11.0",
+    "axios-mock-adapter": "^2.1.0",
     "base-64": "1.0.0",
     "bcrypt-react-native": "1.1.1",
     "bignumber.js": "9.1.1",
@@ -121,15 +121,15 @@
     "ed25519-hd-key": "1.3.0",
     "events": "3.3.0",
     "expo": "53.0.20",
-    "expo-asset": "11.1.7",
-    "expo-blur": "14.1.5",
-    "expo-camera": "16.1.10",
-    "expo-constants": "17.1.7",
-    "expo-haptics": "14.1.4",
-    "expo-linking": "7.1.7",
-    "expo-local-authentication": "16.0.5",
-    "expo-secure-store": "14.2.3",
-    "expo-splash-screen": "0.30.1",
+    "expo-asset": "~11.1.7",
+    "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.10",
+    "expo-constants": "~17.1.7",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.7",
+    "expo-local-authentication": "~16.0.5",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.1",
     "fuse.js": "6.6.2",
     "h3-js": "4.1.0",
     "i18next": "21.9.1",
@@ -138,11 +138,11 @@
     "lottie-ios": "4.5.1",
     "lottie-react-native": "7.2.4",
     "markdown-it": "13.0.2",
-    "metro-react-native-babel-transformer": "0.77.0",
+    "metro-react-native-babel-transformer": "^0.77.0",
     "parse5": "6.0.1",
     "patch-package": "8.0.0",
-    "qs": "6.14.0",
-    "query-string": "9.1.1",
+    "qs": "^6.14.0",
+    "query-string": "^9.1.1",
     "react": "19.0.0",
     "react-async-hook": "4.0.0",
     "react-error-boundary": "4.0.13",
@@ -154,7 +154,7 @@
     "react-native-config": "1.4.6",
     "react-native-device-info": "8.7.1",
     "react-native-flash-message": "0.2.1",
-    "react-native-gesture-handler": "2.27.1",
+    "react-native-gesture-handler": "^2.27.1",
     "react-native-get-random-values": "1.8.0",
     "react-native-icloudstore": "0.9.0",
     "react-native-jazzicon": "0.1.2",
@@ -171,16 +171,16 @@
     "react-native-pager-view": "6.8.1",
     "react-native-permissions": "5.3.0",
     "react-native-qrcode-svg": "6.1.2",
-    "react-native-quick-crypto": "0.7.17",
+    "react-native-quick-crypto": "^0.7.17",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "3.19.1",
-    "react-native-safe-area-context": "5.5.2",
-    "react-native-screens": "4.13.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
     "react-native-share": "7.9.0",
     "react-native-shared-group-preferences": "1.1.24",
     "react-native-simple-toast": "1.1.4",
     "react-native-snap-carousel": "4.0.0-beta.6",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.12.1",
     "react-native-tab-view": "3.3.4",
     "react-native-test-flight": "1.1.0",
     "react-native-text-ticker": "1.14.0",
@@ -189,14 +189,14 @@
     "react-native-webview": "13.13.5",
     "react-redux": "8.0.4",
     "redux-persist": "6.0.0",
-    "rn-swipe-button": "3.0.1",
+    "rn-swipe-button": "^3.0.1",
     "rxjs": "7.5.6",
     "snakecase-keys": "5.4.2",
-    "stream": "0.0.3",
-    "stream-browserify": "3.0.0",
-    "text-encoding-polyfill": "0.6.7",
-    "tinycolor2": "1.6.0",
-    "use-debounce": "10.0.4"
+    "stream": "^0.0.3",
+    "stream-browserify": "^3.0.0",
+    "text-encoding-polyfill": "^0.6.7",
+    "tinycolor2": "^1.6.0",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@babel/core": "7.26.10",
@@ -220,18 +220,18 @@
     "@types/markdown-it": "13.0.5",
     "@types/parse5": "5.0.3",
     "@types/qs": "6.9.7",
-    "@types/react": "19.0.0",
+    "@types/react": "^19.0.0",
     "@types/react-native-charts-wrapper": "0.5.2",
     "@types/react-native-shared-group-preferences": "1.1.1",
     "@types/react-native-snap-carousel": "3.8.5",
     "@types/react-native-video": "5.0.14",
-    "@types/react-test-renderer": "19.0.0",
+    "@types/react-test-renderer": "^19.0.0",
     "@types/semver": "7.3.12",
     "@types/tinycolor2": "1.4.3",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
     "babel-jest": "29.7.0",
-    "babel-plugin-module-resolver": "5.0.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-transform-remove-console": "6.9.4",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
@@ -252,12 +252,12 @@
     "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "0.14.3",
     "react-test-renderer": "19.0.0",
-    "reactotron-react-native": "5.1.3",
-    "reactotron-redux": "3.1.9",
+    "reactotron-react-native": "^5.1.3",
+    "reactotron-redux": "^3.1.9",
     "typescript": "5.0.4"
   },
   "resolutions": {
-    "@types/react": "19.0.0",
+    "@types/react": "^19.0.0",
     "react": "19.0.0",
     "@solana/wallet-adapter-react": "0.15.33",
     "@helium/account-fetch-cache": "0.10.33",
@@ -266,7 +266,7 @@
     "@helium/voter-stake-registry-hooks": "0.10.33",
     "@helium/voter-stake-registry-sdk": "0.10.33",
     "@helium/modular-governance-hooks": "0.1.5",
-    "@helium/onboarding": "5.0.1"
+    "@helium/onboarding": "^5.0.1"
   },
   "packageManager": "yarn@4.9.2"
 }
