--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "helium-wallet",
-  "version": "2.14.12",
+  "version": "2.14.14",
   "private": true,
   "scripts": {
     "postinstall": "patch-package",
@@ -75,12 +75,12 @@
     "@metaplex-foundation/mpl-bubblegum": "0.6.0",
     "@metaplex-foundation/mpl-token-metadata": "2.10.0",
     "@ngraveio/bc-ur": "1.1.13",
-    "@noble/ciphers": "^1.3.0",
-    "@noble/ed25519": "^2.3.0",
-    "@noble/hashes": "^1.8.0",
+    "@noble/ciphers": "1.3.0",
+    "@noble/ed25519": "2.3.0",
+    "@noble/hashes": "1.8.0",
     "@onsol/tldparser": "0.5.3",
     "@react-native-async-storage/async-storage": "1.18.1",
-    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-clipboard/clipboard": "1.16.3",
     "@react-native-community/checkbox": "0.5.20",
     "@react-native-community/hooks": "2.8.1",
     "@react-native-community/netinfo": "9.3.7",
@@ -173,7 +173,7 @@
     "react-native-qrcode-svg": "6.1.2",
     "react-native-quick-crypto": "^0.7.17",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "3.19.1",
+    "react-native-reanimated": "3.18.0",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-share": "7.9.0",
